codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__footer_mode_shortcut_overlay.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                                                                    "
"› Ask Codex to do anything                                                                          "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"  / for commands                                     ! for shell commands                           "
"  ⇧ + enter for newline                              ⌃ + ⇧ + ← / Ctrl+Shift+→ to change model       "
"  ⌃ + ⇧ + ↑ / Ctrl+Shift+↓ to change thinking                                                       "
"  tab to queue message                               @ for file paths                               "
"  ⌘ + v to paste from clipboard                      ⌃ + r to copy last output                      "
"  ⌃ + b to copy code block                           ⌃ + l to copy prompt                           "
"  ⌃ + g to edit in external editor                   esc again to edit or branch previous message   "
"  ⌃ + c to exit                                                                                     "
"  ⌃ + t to view transcript                                                                          "
